[package]
name = "polars-leak"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
polars = { version = "0.29.0", features = ["lazy", "performant", "temporal", "timezones", "nightly", "dtype-categorical"] }

[profile.release]
# codegen-units = 1
# lto = true
debug = 1
